--- a/HTML ASSESSMENT 1.html
+++ b/HTML ASSESSMENT 1.html
@@ -53,13 +53,15 @@
             border-width: 0px;
         }
         #pic{
+            height:200px;
+            width:200px;
             display:none;
         }
     </style>
 </head>
 
 <body>
-    <img id="pic" src="235-2350916_student-netid-login-transparent-background-student-icon-hd.png">
+   
     <div id="formcont">
         <legend>REGISTRATION FORM </legend>
         <form id="reg" action="" method="post">
@@ -187,9 +189,18 @@
             if (ftball) {
                 document.write("<p>FOOOTBALL</p>");
             }
-           
-
+            displayImage('235-2350916_student-netid-login-transparent-background-student-icon-hd.png',250,250);
         }
+         
+            function displayImage(src, width, height) {
+ var img = document.createElement("img");
+ img.src = src;
+ img.width = width;
+ img.height = height;
+ document.body.appendChild(img);
+}
+
+
 
     </script>
 </body>
